<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F9"
    android:orientation="vertical"
    tools:context=".signup"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:clipChildren="false"
        android:foregroundGravity="center"
        android:gravity="center|top|center_vertical|fill_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:rotationX="32"
            android:text=""
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="#52DCD8D8"
            android:cursorVisible="true"
            android:ems="10"
            android:foregroundGravity="center_vertical"
            android:hint="@string/email_pho"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:shadowColor="#FFFFFF"
            android:text=""
            android:textColor="#000000"
            android:textColorHint="#7E7171"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:width="30dp"
            android:background="#52DCD8D8"
            android:ems="10"
            android:hint="@string/passowrd"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textPassword"
            android:padding="20dp"
            android:text=""
            android:textColor="#000000"
            android:textColorHint="#7E7171" />

        <TextView
            android:id="@+id/createaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="110dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/to_create_account"
            android:layout_marginStart="90dp" />

        <Button
            android:id="@+id/btnloginin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#1E90FF"
            android:padding="20dp"
            android:text="@string/login_in"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />


        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:backgroundTint="#52DCD8D8"
            android:drawableStart="@drawable/google"
            android:padding="20dp"
            android:text="@string/google"
            android:textSize="15sp"
            tools:targetApi="lollipop"
            android:drawableLeft="@drawable/google" />


    </LinearLayout>


</LinearLayout>

